# xray

./: .gitignore  Cargo.toml  LICENSE  todo.md
book/: book.toml  xray.css
book/src/: SUMMARY.md  introduction.md
book/src/interop/: compilation.md  evaluation.md  injectable_dependencies.md  limits.md  (+1 more)
book/theme/: highlight.js
src/: allocations.rs  builtins.rs  compilation_scope.rs  compilation_scopes.rs  compile_err.rs  evaluation_scope.rs  lib.rs  main.rs  mref.rs  native_types.rs  parser.rs  permissions.rs  root_compilation_scope.rs  root_runtime_scope.rs  runtime.rs  runtime_err.rs  runtime_scope.rs  runtime_violation.rs  scopes.rs  time_provider.rs  type_skeleton.rs  units.rs  xexpr.rs  xray.pest  xscope.rs  xtype.rs  xvalue.rs
src/builtin/: array.rs  bool.rs  builtin_permissions.rs  cont_distributions.rs  core.rs  datetime.rs  disc_distributions.rs  floats.rs  generators.rs  generic.rs  include.rs  int.rs  json.rs  mapping.rs  matrix.rs  mod.rs  optional.rs  rational.rs  regex.rs  sequence.rs  set.rs  stack.rs  str.rs  structs.rs  tuple.rs  unions.rs  unknown.rs
src/util/: fenced_string.rs  forward_err.rs  ipush.rs  lazy_bigint.rs  let_match.rs  means.rs  mod.rs  multieither.rs  rc_hash.rs  special_prefix_interner.rs  str_escapes.rs  str_parts.rs  try_extend.rs  try_heap.rs  trysort.rs  xformatter.rs
test_scripts/: 001.xr  002.xr  003.xr  003_function_call.xr  004.xr  004_structs.xr  005.xr  006.xr  006_recursion.xr  007.xr  007_generic_ud.xr  008.xr  009.xr  010.xr  010_generic_struct.xr  011.xr  011_generic_struct.xr  012_short_circut.xr  013.xr  013_methods.xr  014.xr  014_literal_method.xr  015.xr  015_sequences.xr  016.xr  017.xr  017_omega.xr  018.xr  018_sequences.xr  019.xr  020_floats.xr  021.xr  021_nested_sequences.xr  022.xr  022_sets.xr  023.xr  023_stacks.xr  024.xr  024_callables.xr  025.xr  (+480 more)
tests/: run_scripts.rs  script_conf.rs
tests/utils/: capture_writer.rs  memory_writer.rs  mod.rs  time_provider.rs
(+43 files in other folders)
