[package]
name = "xray"
version = "0.1.0"
authors = ["ben avrahami <dontcallme@illcall.you>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.0"
pest_derive = "2.0"
num-traits = "0.2"
num-bigint = "0.4"
num-rational = "0.4.1"
num-integer = "0.1.45"
lazy_static = "1.4.0"
derivative = "2.2.0"
itertools = "0.10.3"
dyn-clone = "1.0.4"
string-interner = "0.14.0"
strum = { version = "0.24", features = ["derive"] }