[package]
name = "xray"
version = "0.1.0"
authors = ["ben avrahami <dontcallme@illcall.you>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.3.0"
pest_derive = "2.0"
num-traits = "0.2"
num-bigint = "0.4"
num-rational = "0.4.1"
num-integer = "0.1.45"
lazy_static = "1.4.0"
derivative = "2.2.0"
itertools = "0.10.3"
dyn-clone = "1.0.4"
string-interner = "0.14.0"
strum = { version = "0.24", features = ["derive"] }
either = "1.8.0"
regex = "1.7.0"
statrs = "0.16.0"
rand = "0.8.5"
derive_more = "0.99.17"
libm = "0.2.7"
serde_json = "1.0.99"
serde = "1"
regex-automata = "0.3.0"

[dev-dependencies]
glob = "0.3.0"
serde = {version="1", features = ["derive"]}
toml = "0.7.2"
stdext = "0.3.1"

[features]
default = ["either"]
either = []
